# EntrenamientoIA

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
entrenamientoia/: __init__.py  dataset.py  features.py  plots.py
entrenamientoia/modeling/: predict.py  train.py
models/: modelo_de_filtrado.tflite  modelo_de_filtrado_2.0.tflite  modelo_de_filtrado_3.0.tflite  modelo_residuos_rpi.tflite  modelo_residuos_rpi_02.tflite  modelo_residuos_rpi_V3_04.tflite
notebooks/: clasificacion_2.0.ipynb  clasificacion_3.0.ipynb  clasificacion_mejorada.ipynb  evaluacion_modelo.ipynb  ordenamiento_automatico_ia.ipynb  uso_modelo_materiales.ipynb  vision_modelo.ipynb
tests/: test_camara_realtime.py
